Fix mobile controls checkbox label alignment

--- a/megaminer/index.html
+++ b/megaminer/index.html
@@ -617,7 +617,7 @@
                     </div>
                     <div class="form-group">
                         <label style="display:inline-flex; align-items:center;">
-                            <input type="checkbox" id="mobile-toggle" onchange="Game.toggleMobile(this.checked)"> Enable Mobile Controls
+                            <input type="checkbox" id="mobile-toggle" onchange="Game.toggleMobile(this.checked)">&nbsp;&nbsp;Enable Mobile Controls
                         </label>
                     </div>
                     <button class="btn" onclick="Game.init()">LAUNCH MISSION</button>
