--- a/megaminer/index.html
+++ b/megaminer/index.html
@@ -1096,7 +1096,7 @@ class SoundManager {
         this.ctx = null;
         this.nodes = {};
         this.volumes = { master: 0.5, music: 0.5, sfx: 0.5, engine: 0.3 };
-        this.playlist = ['audio/Chiptronical.ogg', 'audio/Great_Little_Challenge.ogg', 'audio/Solve_The_Puzzle.ogg', 'audio/Sneaky_Snitch.mp3', 'audio/cozy-lofi-relax-468509.mp3', 'audio/field-duel-lofi-464436.mp3', 'audio/lofi-background-music-3-471122.mp3','audio/chill-lofi-beat-469069.mp3'];
+        this.playlist = ['audio/Chiptronical.ogg', 'audio/Great_Little_Challenge.ogg', 'audio/Solve_The_Puzzle.ogg', 'audio/Sneaky_Snitch.ogg', 'audio/cozy-lofi-relax-468509.mp3', 'audio/field-duel-lofi-464436.ogg', 'audio/lofi-background-music-3-471122.ogg','audio/chill-lofi-beat-469069.ogg'];
         this.currentTrack = 0;
         this.noiseBuffer = null;
     }
