--- a/megaminer/index.html
+++ b/megaminer/index.html
@@ -57,6 +57,7 @@
             --fs-hero:   calc(70px * var(--ui-scale));  /* Start Screen Title */
 
             /* --- ADVANCED STYLING --- */
+            --border-filter: drop-shadow(0 0 5px rgba(0, 0, 0, 1));
             --bevel-size: calc(5px * var(--ui-scale));
             --clip-path-style: polygon(var(--bevel-size) 0%, calc(100% - var(--bevel-size)) 0%, 100% var(--bevel-size), 100% calc(100% - var(--bevel-size)), calc(100% - var(--bevel-size)) 100%, var(--bevel-size) 100%, 0% calc(100% - var(--bevel-size)), 0% var(--bevel-size));
         }
@@ -131,6 +132,7 @@
                 border: 1px solid #444;
                 border-radius: 16px;
                 clip-path: var(--clip-path-style);
+                filter: var(--border-filter);
                 padding: 15px;
                 margin-bottom: 5px;
                 backdrop-filter: blur(4px);
@@ -166,6 +168,7 @@
             border: 1px solid rgba(255,255,255,0.3);
             border-radius: 8px;
             clip-path: var(--clip-path-style);
+            filter: var(--border-filter);
             color: #aaa;
             font-size: var(--fs-icon); /* UPDATED */
             display: flex;
@@ -186,11 +189,13 @@
             gap: 10px;
             width: 160px;
         }
+
         .act-btn {
             background: rgba(255,255,255,0.1);
             border: 1px solid rgba(255,255,255,0.3);
             border-radius: 50%;
             clip-path: var(--clip-path-style);
+            filter: var(--border-filter);
             color: white;
             font-weight: bold;
             font-size: var(--fs-sm); /* UPDATED */
@@ -200,7 +205,9 @@
             justify-content: center;
             text-align: center;
         }
+
         .act-btn:active { background: var(--highlight); color: black; transform: scale(0.95); }
+
         .act-btn i {
             font-size: var(--fs-md); /* UPDATED */
             margin-bottom: 2px;
@@ -282,7 +289,7 @@
         }
 
         /* Modals */
-        .modal { display: none; position: fixed; top: 50%; left: 50%; transform: translate(-50%, -50%); background: var(--panel-bg); padding: 20px; border: 2px solid var(--accent); border-radius: 8px; clip-path: var(--clip-path-style); width: 95%; max-width: 600px; max-height: 90dvh; overflow-y: auto; pointer-events: auto; z-index: 100; box-shadow: 0 0 30px rgba(0,0,0,0.9); -webkit-overflow-scrolling: touch; }
+        .modal { display: none; position: fixed; top: 50%; left: 50%; transform: translate(-50%, -50%); background: var(--panel-bg); padding: 20px; border: 2px solid var(--accent); border-radius: 8px; clip-path: var(--clip-path-style); filter: var(--border-filter); width: 95%; max-width: 600px; max-height: 90dvh; overflow-y: auto; pointer-events: auto; z-index: 100; box-shadow: 0 0 30px rgba(0,0,0,0.9); -webkit-overflow-scrolling: touch; }
         .modal.active { display: block; }
         .modal h2 { margin-top: 0; color: var(--highlight); border-bottom: 1px solid #444; padding-bottom: 10px; text-transform: uppercase; letter-spacing: 1px; font-size: var(--fs-lg); }
 
@@ -357,7 +364,7 @@
             border-bottom: 1px solid #333; padding: 2px 0;
         }
 
-        .btn { background: var(--accent); font-family: "Geo", sans-serif; color: white; border: none; padding: 10px; cursor: pointer; transition: all 0.2s; width: 100%; margin-top: 5px; font-weight: bold; border-radius: 4px; clip-path: var(--clip-path-style); font-size: var(--fs-base); }
+        .btn { background: var(--accent); font-family: "Geo", sans-serif; color: white; border: none; padding: 10px; cursor: pointer; transition: all 0.2s; width: 100%; margin-top: 5px; font-weight: bold; border-radius: 4px; clip-path: var(--clip-path-style); filter: var(--border-filter); font-size: var(--fs-base); }
         .btn:hover { background: #3498db; filter: brightness(1.2); }
         .btn:disabled { background: #555; cursor: not-allowed; filter: none; }
         .btn-small {
@@ -389,16 +396,20 @@
 
         /* Server Status */
         .server-option {
-            display: flex; justify-content: space-between; padding: 2px;
+            display: flex;
+            justify-content: space-between;
+            padding: 2px;
             font-size: var(--fs-sm);
+            clip-path: var(--clip-path-style);
+            filter: var(--border-filter);
         }
         .status-dot { width: 8px; height: 8px; border-radius: 50%; display: inline-block; background: #555; margin-right: 5px; }
         .status-dot.green { background: #2ecc71; box-shadow: 0 0 5px #2ecc71; }
         .status-dot.red { background: #e74c3c; }
 
         /* Save Slots */
-        .save-list-wrapper { max-height: 200px; overflow-y: auto; border: 1px solid #444; background: #111; padding: 5px; margin-bottom: 10px; }
-        .save-slot { background: rgba(0,0,0,0.4); padding: 8px; border: 1px solid #555; margin-bottom: 5px; display: flex; justify-content: space-between; align-items: center; }
+        .save-list-wrapper { max-height: 200px; overflow-y: auto; border: 1px solid #444; background: #111; padding: 5px; margin-bottom: 10px;  clip-path: var(--clip-path-style); filter: var(--border-filter); }
+        .save-slot { background: rgba(0,0,0,0.4); padding: 8px; border: 1px solid #555; margin-bottom: 5px; display: flex; justify-content: space-between; align-items: center; clip-path: var(--clip-path-style); filter: var(--border-filter); }
         .save-slot:hover { background: rgba(255,255,255,0.05); }
         .save-slot.active { border-color: var(--highlight); box-shadow: inset 0 0 10px rgba(243, 156, 18, 0.2); }
         .save-slot-info {
@@ -409,6 +420,8 @@
         .save-slot-actions button {
             margin: 0; padding: 4px 8px;
             font-size: var(--fs-tiny);
+            clip-path: var(--clip-path-style);
+            filter: var(--border-filter);
         }
 
         /* Warp List */
@@ -435,7 +448,7 @@
             color: var(--highlight); margin-bottom: 20px; text-transform: uppercase; letter-spacing: 4px; text-shadow: 0 0 10px var(--highlight);
         }
 
-        .start-container { display:flex; gap:20px; background:rgba(20, 25, 40, 0.95); padding:20px; border-radius:10px; clip-path: var(--clip-path-style); border:1px solid #444; max-width: 75dvw; max-height: 90dvh; overflow-y:auto; -webkit-overflow-scrolling: touch; }
+        .start-container { display:flex; gap:20px; background:rgba(20, 25, 40, 0.95); padding:20px; border-radius:10px; clip-path: var(--clip-path-style); filter: var(--border-filter); border:1px solid #444; max-width: 700px; max-height: 90dvh; overflow-y:auto; -webkit-overflow-scrolling: touch; }
         .start-panel { width:300px; flex-shrink: 0; }
         .server-panel { width:300px; border-left:1px solid #444; padding-left:20px; display:flex; flex-direction:column; flex-shrink: 0; }
 
@@ -478,7 +491,7 @@
 
         /* --- CUSTOM MODAL --- */
         #c-modal-overlay { position: fixed; top: 0; left: 0; width: 100%; height: 100%; background: rgba(0,0,0,0.85); z-index: 9999; display: none; align-items: center; justify-content: center; backdrop-filter: blur(2px); }
-        .c-modal-box { background: rgba(20, 25, 40, 0.98); border: 1px solid var(--accent); padding: 20px; width: 90%; max-width: 400px; border-radius: 8px; clip-path: var(--clip-path-style); box-shadow: 0 0 30px rgba(0,0,0,0.8); text-align: center; animation: slideIn 0.2s ease; }
+        .c-modal-box { background: rgba(20, 25, 40, 0.98); border: 1px solid var(--accent); padding: 20px; width: 90%; max-width: 400px; border-radius: 8px; clip-path: var(--clip-path-style); filter: var(--border-filter); box-shadow: 0 0 30px rgba(0,0,0,0.8); text-align: center; animation: slideIn 0.2s ease; }
         .c-modal-box h3 { color: var(--highlight); margin-top: 0; border-bottom: 1px solid #444; padding-bottom: 10px; margin-bottom: 15px; font-size: var(--fs-lg); }
         .c-modal-box p {
             color: #ddd; margin-bottom: 15px; line-height: 1.4;
@@ -613,7 +626,7 @@
 
         <!-- Chat -->
         <div id="chat-container" onclick="UI.openChat()">
-            <button id="chat-close-btn" onclick="event.stopPropagation(); UI.closeChat()" style="display:none; position:absolute; top:-5px; right:-5px; width:20px; height:20px; border-radius:50%; clip-path: var(--clip-path-style); border:none; background:#c0392b; color:white; font-weight:bold; cursor:pointer; z-index:100; var(--fs-tiny);">X</button>
+            <button id="chat-close-btn" onclick="event.stopPropagation(); UI.closeChat()" style="display:none; position:absolute; top:-5px; right:-5px; width:20px; height:20px; border-radius:50%; clip-path: var(--clip-path-style); filter: var(--border-filter); border:none; background:#c0392b; color:white; font-weight:bold; cursor:pointer; z-index:100; var(--fs-tiny);">X</button>
             <div id="chat-messages"></div>
             <input type="text" id="chat-input" placeholder="Press CHAT key to type...">
         </div>
@@ -891,7 +904,7 @@
                     </button>
                 </div>
                 <div id="cloud-status" style="font-size: var(--fs-sm); color:#aaa; display:flex; justify-content:space-between;">
-                    <span>Status: Connected (Puter)</span>
+                    <span>Status:</span>
                     <span id="cloud-bin-display" style="font-family:'Geo',sans-serif;"></span>
                 </div>
                 <small style="color:#666;">Fetch Cloud Saves to see worlds from other devices.</small>
