--- a/megaminer/index.html
+++ b/megaminer/index.html
@@ -1,10 +1,11 @@
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
     <link rel="icon" type="image/png" href="img/amogus.png">
-    <title>Mega Miner Online</title>
+    <title>Mega Miner NG</title>
     <!-- TODO: move this to a shared dir for the other programs -->
     <script src="lib/mqtt.min.js"></script>
     <script src="lib/puter-v2.min.js"></script>
@@ -83,9 +84,7 @@
             }
         }
 
-        /* --- THE SCI-FI BORDER ENGINE UTILITY --- */
-        /* You can add this class to HTML, or we apply the logic to existing classes below */
-        .scifi-border {
+        .bevel-border {
             position: relative;
             background: transparent !important;
             box-shadow: none !important;
@@ -95,7 +94,7 @@
             --border-color: var(--border-grey);
         }
 
-        .scifi-border::before {
+        .bevel-border::before {
             content: "";
             position: absolute;
             inset: 0;
@@ -105,7 +104,7 @@
             pointer-events: none;
         }
 
-        .scifi-border::after {
+        .bevel-border::after {
             content: "";
             position: absolute;
             inset: var(--border-width);
@@ -262,7 +261,7 @@
             position: absolute;
             width: 50px;
             height: 50px;
-            /* Updated for Sci-Fi Border */
+            /* Updated for bevel Border */
             background: transparent !important;
             border: none !important;
             z-index: 1;
@@ -330,7 +329,7 @@
         }
 
         .act-btn {
-            /* Updated for Sci-Fi Border */
+            /* Updated for bevel Border */
             position: relative;
             background: transparent !important;
             border: none !important;
@@ -713,7 +712,7 @@
         }
 
         .form-group label {
-            display: block;
+            display: flex;
             margin-bottom: 5px;
             font-size: var(--fs-base);
             color: #aaa;
@@ -949,7 +948,6 @@
             cursor: not-allowed;
         }
 
-        /* FIX: Larger btn-small */
         .btn-small {
             width: auto;
             padding: 6px 14px;
@@ -975,6 +973,56 @@
             background: #c0392b;
             border-color: #e74c3c;
             animation: pulse-red 1s infinite;
+        }
+
+        input[type="checkbox"]{
+            appearance:none;
+            width:40px;
+            height:16px;
+            border:1px solid #aaa;
+            border-radius:2px;
+            background:#ebebeb;
+            position:relative;
+            display:inline-block;
+            overflow:hidden;
+            vertical-align:middle;
+            transition: background 0.3s;
+            box-sizing:border-box;
+        }
+
+        input[type="checkbox"]:after{
+            content:'';
+            position:absolute;
+            top:-1px;
+            left:-1px;
+            width:14px;
+            height:14px;
+            background:white;
+            border:1px solid #aaa;
+            border-radius:2px;
+            transition: left 0.1s cubic-bezier(0.785, 0.135, 0.15, 0.86);
+        }
+
+        input[type="checkbox"]:checked{
+            background:#a6c7ff;
+            border-color:#8daee5;
+        }
+
+        input[type="checkbox"]:checked:after{
+            left:23px;
+            border-color:#8daee5;
+        }
+
+        input[type="checkbox"]:hover:not(:checked):not(:disabled):after{
+            left:3px;
+        }
+
+            input[type="checkbox"]:hover:checked:not(:disabled):after{
+            left:20px;
+        }
+
+        input[type="checkbox"]:disabled{
+            opacity:0.5;
         }
 
         @keyframes pulse-red {
@@ -1509,7 +1557,7 @@
 
         <!-- Start Screen -->
         <div id="start-screen">
-            <h1>Mega Miner</h1>
+            <h1 class="title-text">Mega Miner NG</h1>
             <div class="start-container">
                 <div class="start-panel">
                     <div class="form-group">
@@ -1528,7 +1576,7 @@
                         <input type="color" id="start-color" value="#3498db" style="height:40px;">
                     </div>
                     <div class="form-group">
-                        <label style="display:inline-flex; align-items:center;">
+                        <label style="font-size:var(--fs-base);"/>
                             <input type="checkbox" id="mobile-toggle" onchange="Game.toggleMobile(this.checked)">&nbsp;&nbsp;Enable Mobile Controls
                         </label>
                     </div>
@@ -2587,21 +2635,32 @@ class GameEngine {
     }
 
     resize() {
+        const dpr = window.devicePixelRatio || 1;
+        let targetCssWidth;
+        let targetCssHeight;
+
         if (this.isMobile) {
             if (window.innerWidth > window.innerHeight) {
-                // Landscape: 200px buffer on each side (400px total)
-                this.canvas.width = window.innerWidth - 400;
-                this.canvas.height = window.innerHeight;
+                targetCssWidth = window.innerWidth - 400;
+                targetCssHeight = window.innerHeight;
             } else {
-                // Portrait: Bottom bar
-                this.canvas.width = window.innerWidth;
-                this.canvas.height = window.innerHeight - 180; // 180px for controls
+                targetCssWidth = window.innerWidth;
+                targetCssHeight = window.innerHeight - 180; // 180px for controls
             }
         } else {
-            this.canvas.width = window.innerWidth;
-            this.canvas.height = window.innerHeight;
+            targetCssWidth = window.innerWidth;
+            targetCssHeight = window.innerHeight;
         }
+
+        this.canvas.style.width = targetCssWidth + 'px';
+        this.canvas.style.height = targetCssHeight + 'px';
+
+        this.canvas.width = Math.floor(targetCssWidth * dpr);
+        this.canvas.height = Math.floor(targetCssHeight * dpr);
+
+        this.ctx.scale(dpr, dpr);
     }
+
 
     generateMap() {
         for (let y = 0; y < CONSTANTS.MAP_HEIGHT; y++) {
@@ -3747,37 +3806,56 @@ class GameEngine {
         });
     }
 
-    drawHUD() {
-        const p = this.localPlayer;
-        const w = this.canvas.width;
-        const h = this.canvas.height;
+   drawHUD() {
+    const p = this.localPlayer;
+    const w = this.canvas.width;
+    const h = this.canvas.height;
+    const dpr = window.devicePixelRatio || 1;
 
-        // Adjust gauge scale and position for mobile
-        const gaugeR = this.isMobile ? Math.min(this.canvas.width/12, 60) : 55;
-        const yPos = h - (gaugeR * 1.5); // Sits just above bottom of canvas
-        const xStep = this.isMobile ? (w / 4) : 100; // Spread evenly or fixed
+    // 1. Calculate dynamic radius and spacing
+    const gaugeR = (this.isMobile ? Math.min(w / 10, 40) : 55) * dpr;
+    const padding = 20 * dpr; // Space from screen edges
+    const gap = 15 * dpr;    // Space between the gauges themselves
+    
+    // The total horizontal space one gauge occupies
+    const gaugeStep = (gaugeR * 2) + gap; 
 
-        if (this.isMobile) {
-            // Even spread across top of controls
-            this.drawGauge(w*0.15, yPos, gaugeR, p.fuel, p.maxFuel, "FUEL", "#d35400");
-            this.drawGauge(w*0.38, yPos, gaugeR, p.hull, p.maxHull, "HULL", "#c0392b");
-            this.drawGauge(w*0.62, yPos, gaugeR, p.cargo, p.maxCargo, "CARGO", "#27ae60");
-            this.drawGauge(w*0.85, yPos, gaugeR, p.temp, 100, "TEMP", "#e74c3c");
+    if (this.isMobile) {
+        // MOBILE: Center all 4 gauges in a row at the bottom
+        const yPos = h - (gaugeR * 1.5);
+        const totalWidth = (gaugeStep * 4) - gap;
+        const startX = (w - totalWidth) / 2 + gaugeR;
 
-            // Money top center
-            this.ctx.fillStyle = "#f1c40f"; this.ctx.font = "bold " + getFontSize('--fs-title') + " Geo"; this.ctx.textAlign = "center";
-            this.ctx.fillText("$ " + Math.floor(p.money), w/2, 30);
-        } else {
-            // Desktop layout (bottom corners)
-            this.drawGauge(80, h - 60, gaugeR, p.fuel, p.maxFuel, "FUEL", "#d35400");
-            this.drawGauge(240, h - 60, gaugeR, p.hull, p.maxHull, "HULL", "#c0392b");
-            this.drawGauge(w - 80, h - 60, gaugeR, p.cargo, p.maxCargo, "CARGO", "#27ae60");
-            this.drawGauge(w - 240, h - 60, gaugeR, p.temp, 100, "TEMP", "#e74c3c");
+        this.drawGauge(startX, yPos, gaugeR, p.fuel, p.maxFuel, "FUEL", "#d35400");
+        this.drawGauge(startX + gaugeStep, yPos, gaugeR, p.hull, p.maxHull, "HULL", "#c0392b");
+        this.drawGauge(startX + (gaugeStep * 2), yPos, gaugeR, p.cargo, p.maxCargo, "CARGO", "#27ae60");
+        this.drawGauge(startX + (gaugeStep * 3), yPos, gaugeR, p.temp, 100, "TEMP", "#e74c3c");
 
-            this.ctx.fillStyle = "#f1c40f"; this.ctx.font = "bold " + getFontSize('--fs-title') + " Geo"; this.ctx.textAlign = "center";
-            this.ctx.fillText("$ " + Math.floor(p.money), w/2, h - 30);
-        }
+        // Money top center
+        this.ctx.fillStyle = "#f1c40f"; 
+        this.ctx.font = `bold ${getFontSize('--fs-title')} Geo`; 
+        this.ctx.textAlign = "center";
+        this.ctx.fillText("$ " + Math.floor(p.money), w / 2, 40 * dpr);
+
+    } else {
+        // DESKTOP: Pair them in bottom corners
+        const yPos = h - gaugeR - padding;
+        
+        // Left side gauges
+        this.drawGauge(padding + gaugeR, yPos, gaugeR, p.fuel, p.maxFuel, "FUEL", "#d35400");
+        this.drawGauge(padding + gaugeR + gaugeStep, yPos, gaugeR, p.hull, p.maxHull, "HULL", "#c0392b");
+
+        // Right side gauges
+        this.drawGauge(w - padding - gaugeR, yPos, gaugeR, p.cargo, p.maxCargo, "CARGO", "#27ae60");
+        this.drawGauge(w - padding - gaugeR - gaugeStep, yPos, gaugeR, p.temp, 100, "TEMP", "#e74c3c");
+
+        // Money bottom center
+        this.ctx.fillStyle = "#f1c40f"; 
+        this.ctx.font = `bold ${getFontSize('--fs-title')} Geo`; 
+        this.ctx.textAlign = "center";
+        this.ctx.fillText("$ " + Math.floor(p.money), w / 2, h - padding);
     }
+}
 
     drawGauge(x, y, r, val, max, label, color) { /* Same as before */
         const ctx = this.ctx;
@@ -3788,7 +3866,8 @@ class GameEngine {
         const current = start + (end - start) * pct;
         ctx.beginPath(); ctx.arc(x, y, r - 5, start, current); ctx.strokeStyle = color; ctx.lineWidth = 6; ctx.stroke();
         ctx.fillStyle = "#fff"; ctx.font = "bold " + getFontSize('--fs-md') + " Geo"; ctx.textAlign = "center";
-        ctx.fillText(label, x, y + 15); ctx.fillText(Math.floor(val), x, y - 5);
+        ctx.fillText(label, x, y + (15 * window.devicePixelRatio)); 
+        ctx.fillText(Math.floor(val), x, y -(5 * window.devicePixelRatio));
     }
 
     loop() {
@@ -5804,7 +5883,7 @@ function parseCSSCalc(calcString) {
     }
 }
 
-function getFontSize(varName) { return parseCSSCalc(getComputedStyle(document.documentElement).getPropertyValue(varName))+'px'; }
+function getFontSize(varName) { return (parseCSSCalc(getComputedStyle(document.documentElement).getPropertyValue(varName)) * window.devicePixelRatio) + 'px'; }
 
 // --- INSTANTIATION ---
 const Game = new GameEngine();
@@ -5857,6 +5936,13 @@ const creditsData = {
         "Playtesters",
         "Contributors",
         "The laptops that were sacrificed in the making of this game"
+    ],
+
+    codeAssets: [
+        {
+            name: "LeonardMeagher2",
+            items: ["(Checkboxes): <a href='https://codepen.io/LeonardMeagher2/pen/NvOLZr'>CodePen Link</a>"]
+        },
     ]
 };
 // JANK AUDIO FIX
@@ -5865,16 +5951,10 @@ Sound.loadSettings()
 document.getElementById('credits').innerHTML = generateCreditsHTML(creditsData);
 </script>
 <script>
-/**
- * UI Effects Manager
- * * Includes utilities to convert standard elements into
- * Sci-Fi Beveled Elements using the pseudo-element CSS strategy.
- */
-
 const UIFX = {
     /**
      * Converts DOM elements matching the selector to use the
-     * .scifi-border class structure.
+     * .bevel-border class structure.
      * * @param {string} selector - CSS Selector (e.g. ".my-btn")
      * @param {string} [borderColor] - Optional specific border color
      * @param {string} [bgColor] - Optional specific background color
@@ -5884,7 +5964,7 @@ const UIFX = {
 
         elements.forEach(el => {
             // 1. Add the core class
-            el.classList.add('scifi-border');
+            el.classList.add('bevel-border');
 
             // 2. Apply custom colors if provided via inline CSS vars
             if (borderColor) {
@@ -5899,16 +5979,10 @@ const UIFX = {
             el.style.overflow = 'visible'; // Clip-path handles the shape, overflow needs to be visible for shadows usually
         });
 
-        console.log(`UIFX: Converted ${elements.length} elements to Sci-Fi Borders.`);
+        console.log(`UIFX: Converted ${elements.length} elements to beveled borders.`);
     },
 
-    /**
-     * Apply bevels to the entire default UI set.
-     * Call this on page load if you are adding elements dynamically
-     * that don't have the classes in HTML.
-     */
     init: function() {
-        // Example: Convert any generic buttons that might have been missed
         this.convertToBeveled('button.generic');
     }
 };
